--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,10 @@
       },
       {
         "src": "api.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["backend/database.sqlite", "backend/*.csv"]
+        }
       }
     ],
     "rewrites": [
@@ -24,4 +27,4 @@
         "destination": "/index.html"
       }
     ]
-  }  
+  }
