--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
   },
   "dependencies": {
     "@google/genai": "^1.13.0",
+    "@vscode/sqlite3": "^5.1.8-vscode",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.3",
+    "sqlite": "^5.1.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
